[gd_scene load_steps=24 format=2]

[ext_resource path="res://Objects/NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://Objects/NPC/Mom.png" type="Texture" id=2]
[ext_resource path="res://Objects/NPC/Template.png" type="Texture" id=3]
[ext_resource path="res://UI/Hint/Feather.png" type="Texture" id=4]
[ext_resource path="res://Objects/NPC/Speech.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/Hint/Shift1.png" type="Texture" id=6]
[ext_resource path="res://UI/Hint/Shift2.png" type="Texture" id=7]
[ext_resource path="res://Objects/NPC/Old Man.png" type="Texture" id=8]
[ext_resource path="res://Objects/NPC/Old Lady.png" type="Texture" id=9]
[ext_resource path="res://Objects/NPC/Lady.png" type="Texture" id=10]
[ext_resource path="res://Objects/NPC/Father.png" type="Texture" id=11]
[ext_resource path="res://Objects/NPC/Mother.png" type="Texture" id=12]
[ext_resource path="res://Objects/NPC/Strange Man.png" type="Texture" id=13]
[ext_resource path="res://Objects/NPC/Computer.png" type="Texture" id=14]
[ext_resource path="res://Objects/NPC/Cookie.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Cookie",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Mom",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Old Man",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Old Lady",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Lady",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Father",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Mother",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Strange Man",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Computer",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "template",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://UI/VT323-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 28
extra_spacing_space = -4
font_data = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "note"
pressed = true

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="NPC" type="RigidBody2D"]
mode = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "template"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Speech" type="Node2D" parent="."]
position = Vector2( 23.2929, -28.2877 )
z_index = 2

[node name="Text" type="Label" parent="Speech"]
self_modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 3
margin_left = -83.6161
margin_top = -10.5606
margin_right = 36.3839
margin_bottom = 33.4394
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -4
text = "Test Text jaja
uuu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button Note" type="Button" parent="Speech"]
light_mask = 3
margin_left = -23.8232
margin_top = -11.6639
margin_right = -4.82323
margin_bottom = 12.3361
shortcut = SubResource( 7 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Speech/Button Note"]
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 3
position = Vector2( 23.8232, 11.6639 )
z_index = -1
frames = SubResource( 8 )
frame = 1
playing = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="button_down" from="Speech/Button Note" to="." method="_on_Button_Note_button_down"]
